# criminal-code-tools

./: .env.example  .gitignore  README.md  analytics.ipynb  offences-v1.csv  offences-v2.csv  offences-v3.csv  offences.csv  pyproject.toml  requirements.txt
_legacy/: analytics_manual.py
_legacy/rules/: cc_rules_2024_09_01-2024_09_17.py
apps/data_processing/: apps.py  models.py  serializers.py  tests.py  urls.py  urls_api.py  views.py
apps/data_processing/ingestion/: case_metadata.py
apps/data_processing/migrations/: 0001_initial.py  0002_alter_casemetadata_options_alter_factpattern_options_and_more.py  0003_casemetadata_source_url_and_more.py  0004_alter_casemetadata_categories_and_more.py  0005_auto_20250327_2244.py  0006_alter_casemetadata_categories_and_more.py
apps/data_processing/tests/: test_ingestion.py
apps/offence_grid/: apps.py  urls.py  views.py
apps/search/: apps.py  models.py  urls.py  views.py
core/: settings.py  urls.py  views.py
offence_grid/: apps.py  views.py
src/_legacy/: map.py
src/criminal-code-offence-parser/: analytics.py  cc_rules_current.py  constants.py  main.py  map.py  parser.py  sk_collateral_consequences.py  test_cases.py  utils.py
src/criminal-code-offence-parser-646e62/: constants.py  main.py
src/data/: cannabis-offences-2024-09-16.csv  nbmva-2024-01-01.csv
src/tests/: tests.py
src/tools/: ca_collateral_consequences.py  cc_rules_current.py  collateral_consequences.py  constants.py  main.py  utils.py
src/ux/: agent.py
templates/: base.html  index.html
templates/core/: home.html
tests/: dev_notebook.ipynb
(+29 files in other folders)
