[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "criminal_code_offence_parser"
version = "0.0.2"
authors = [
  { name="Daniel Booy", email="daniel@danielbooy.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
]

[project.urls]
Homepage = "https://github.com/646e62/criminal-code-offence-parser/"
Issues = "https://github.com/646e62/criminal-code-offence-parser/issues"